# cpp-book-programs

./: README.md
chapter1/BasicCalculator/: BasicCalculator.bat  BasicCalculator.cpp  BasicCalculator.h  CMakeLists.txt
chapter1/GameOver/: CMakeLists.txt  GameOver.bat  GameOver.cpp  GameOver.h
chapter1/GameStats/: CMakeLists.txt  GameStats.bat  GameStats.cpp  GameStats.h
chapter1/LostFortune/: CMakeLists.txt  LostFortune.bat  LostFortune.cpp  LostFortune.h
chapter1/VariableGameStats/: CMakeLists.txt  VariableGameStats.bat  VariableGameStats.cpp  VariableGameStats.h
chapter10/AbstractCreature/: AbstractCreature.cpp  AbstractCreature.h  CMakeLists.txt  Creature.cpp  Creature.h  Orc.cpp  Orc.h  run.bat
chapter10/Blackjack/: Blackjack.cpp  Blackjack.h  CMakeLists.txt  planning.txt  run.bat
chapter10/Blackjack/Cards/: Card.cpp  Card.h  Hand.cpp  Hand.h
chapter10/Blackjack/Players/: House.cpp  House.h  Player.cpp  Player.h
chapter10/OverridingBoss/: Boss.cpp  Boss.h  CMakeLists.txt  Enemy.cpp  Enemy.h  OverridingBoss.cpp  OverridingBoss.h  run.bat
chapter10/PolyBadGuy/: Boss.cpp  Boss.h  CMakeLists.txt  Enemy.cpp  Enemy.h  PolyBadGuy.cpp  PolyBadGuy.h  run.bat
chapter10/SimpleBoss/: Boss.cpp  Boss.h  CMakeLists.txt  Enemy.cpp  Enemy.h  SimpleBoss.cpp  SimpleBoss.h  run.bat
chapter10/SimpleBossExtended/: Boss.cpp  Boss.h  CMakeLists.txt  Enemy.cpp  Enemy.h  SimpleBossExtended.cpp  SimpleBossExtended.h  run.bat
chapter2/DesignersNetwork/: CMakeLists.txt  DesignersNetwork.bat  DesignersNetwork.cpp  DesignersNetwork.h
chapter2/DieRoller/: CMakeLists.txt  DieRoller.bat  DieRoller.cpp  DieRoller.h
chapter2/GuessMyNumber/: CMakeLists.txt  GuessMyNumber.bat  GuessMyNumber.cpp  GuessMyNumber.h
chapter2/MenuChooser/: CMakeLists.txt  MenuChooser.bat  MenuChooser.cpp  MenuChooser.h
chapter2/PlayAgain/: CMakeLists.txt  PlayAgain.bat  PlayAgain.cpp  PlayAgain.h
chapter2/ScoreRater/: CMakeLists.txt  ScoreRater.bat  ScoreRater.cpp  ScoreRater.h
chapter3/Counter/: CMakeLists.txt  Counter.bat  Counter.cpp  Counter.h
chapter3/HeroInventory/: CMakeLists.txt  HeroInventory.bat  HeroInventory.cpp  HeroInventory.h
chapter3/TicTacToeBoard/: CMakeLists.txt  TicTacToeBoard.bat  TicTacToeBoard.cpp  TicTacToeBoard.h
chapter3/WordJumble/: CMakeLists.txt  WordJumble.bat  WordJumble.cpp  WordJumble.h
chapter4/Hangman/: CMakeLists.txt  Hangman Planning.txt  Hangman.bat  Hangman.cpp  Hangman.h
chapter4/HeroInventoryIterator/: CMakeLists.txt  HeroInventoryIterator.bat  HeroInventoryIterator.cpp  HeroInventoryIterator.h
chapter4/HeroInventoryVectors/: CMakeLists.txt  HeroInventoryVectors.bat  HeroInventoryVectors.cpp  HeroInventoryVectors.h
chapter4/HighScores/: CMakeLists.txt  HighScores.bat  HighScores.cpp  HighScores.h
chapter5/DefaultArgument/: CMakeLists.txt  DefaultArgument.cpp  DefaultArgument.h  run.bat
chapter5/FunctionOverload/: CMakeLists.txt  FunctionOverload.cpp  FunctionOverload.h  run.bat
chapter5/InlineFunctions/: CMakeLists.txt  InlineFunctions.cpp  InlineFunctions.h  run.bat
chapter5/Instructions/: CMakeLists.txt  Instructions.cpp  Instructions.h  run.bat
chapter5/MadLib/: CMakeLists.txt  MadLib.cpp  MadLib.h  run.bat
chapter5/YOrN/: CMakeLists.txt  YOrN.cpp  YOrN.h  run.bat
chapter6/InventoryDisplayer/: CMakeLists.txt  InventoryDisplayer.cpp  InventoryDisplayer.h  run.bat
chapter6/InventoryReferencer/: CMakeLists.txt  InventoryReferencer.cpp  InventoryReferencer.h  run.bat
chapter6/Referencing/: CMakeLists.txt  Referencing.cpp  Referencing.h  run.bat
chapter6/SwapScores/: CMakeLists.txt  SwapScores.cpp  SwapScores.h  run.bat
chapter6/TicTacToeRef/: CMakeLists.txt  TicTacToeRef.cpp  TicTacToeRef.h  planning.txt  run.bat
chapter7/ArrayPasser/: ArrayPasser.cpp  ArrayPasser.h  CMakeLists.txt  run.bat
chapter7/InventoryPointer/: CMakeLists.txt  InventoryPointer.cpp  InventoryPointer.h  run.bat
chapter7/Pointing/: CMakeLists.txt  Pointing.cpp  Pointing.h  run.bat
chapter7/SwapPointer/: CMakeLists.txt  SwapPointer.cpp  SwapPointer.h  run.bat
chapter7/TickTackToePnt/: CMakeLists.txt  TickTackToePnt.cpp  TickTackToePnt.h  planning.txt  run.bat
chapter8/ConstructorCritter/: CMakeLists.txt  ConstructorCritter.cpp  ConstructorCritter.h  Critter.cpp  Critter.h  run.bat
chapter8/PetCaretaker/: CMakeLists.txt  PetCaretaker.cpp  PetCaretaker.h  planning.txt  run.bat
chapter8/PetCaretaker/Pets/: Dog.cpp  Dog.h
chapter8/PrivateCritter/: CMakeLists.txt  Critter.cpp  Critter.h  PrivateCritter.cpp  PrivateCritter.h  run.bat
chapter8/SimpleCritter/: CMakeLists.txt  Critter.cpp  Critter.h  SimpleCritter.cpp  SimpleCritter.h  run.bat
chapter8/StaticCritter/: CMakeLists.txt  Critter.cpp  Critter.h  StaticCritter.cpp  StaticCritter.h  run.bat
chapter9/CritterFarm/: CMakeLists.txt  CritterFarm.cpp  CritterFarm.h  Farm.cpp  Farm.h  run.bat
chapter9/FriendCritter/: CMakeLists.txt  Critter.cpp  (+4 more)
chapter9/HeapDataMember/: CMakeLists.txt  Critter.cpp  Critter.h  HeapDataMember.cpp  HeapDataMember.h  run.bat
(+14 files in other folders)
