# CMakeList.txt : CMake project for GameOver, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("GameOver")

# Add source to this project's executable.
add_executable (GameOver "GameOver.cpp" "GameOver.h")

# TODO: Add tests and install targets if needed.
