# CMakeList.txt : CMake project for MenuChooser, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("MenuChooser")

# Add source to this project's executable.
add_executable (MenuChooser "MenuChooser.cpp" "MenuChooser.h")

# TODO: Add tests and install targets if needed.
