# CMakeList.txt : CMake project for PlayAgain, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("PlayAgain")

# Add source to this project's executable.
add_executable (PlayAgain "PlayAgain.cpp" "PlayAgain.h" )

# TODO: Add tests and install targets if needed.
