# CMakeList.txt : CMake project for TickTackToePnt, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("TickTackToePnt")

# Add source to this project's executable.
add_executable (TickTackToePnt "TickTackToePnt.cpp" "TickTackToePnt.h")

# TODO: Add tests and install targets if needed.
